fix: schema and response for getUserByEmail

--- a/sources/b-end/package.json
+++ b/sources/b-end/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@apollo/server": "^4.9.5",
     "graphql": "^16.8.1",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0"
   },
   "devDependencies": {
