--- a/sources/b-end/package.json
+++ b/sources/b-end/package.json
@@ -1,22 +1,23 @@
 {
-  "name": "a-start",
-  "version": "1.0.0",
-  "description": "",
-  "main": "app.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@apollo/server": "^4.9.5",
-    "graphql": "^16.8.1",
-    "jsonwebtoken": "^9.0.2",
-    "mongodb": "^6.3.0"
-  },
-  "devDependencies": {
-    "dotenv": "^16.3.1",
-    "nodemon": "^3.0.1"
-  }
+	"name": "a-start",
+	"version": "1.0.0",
+	"description": "",
+	"main": "app.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"@apollo/server": "^4.11.2",
+		"graphql": "^16.9.0",
+		"jsonwebtoken": "^9.0.2",
+		"mongodb": "^6.11.0"
+	},
+	"devDependencies": {
+		"dotenv": "^16.4.5",
+		"nodemon": "^3.0.1"
+	},
+	"type": "module"
 }
